# SpaceGame

./: CMakeLists.txt  README.md  build.sh  main.cpp
scr/: asteroid.cpp  asteroid.h  bullet.cpp  bullet.h  game.cpp  game.h  math.cpp  math.h  menu.cpp  menu.h  player.cpp  player.h  renderer.cpp  renderer.h
